--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "devDependencies": {
     "@playwright/test": "^1.50.1",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^22.13.2",
     "allure-playwright": "^3.1.0",
     "csv-parse": "^5.6.0",
@@ -19,6 +20,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.7",
+    "jsdom": "^26.0.0",
     "openai": "^4.84.1"
   }
 }
